spacing fixes

--- a/src/app/draw/input-panel/history/history.module.scss
+++ b/src/app/draw/input-panel/history/history.module.scss
@@ -27,7 +27,7 @@
 
     .top-section {
       display: flex;
-      justify-content: space-between;
+      justify-content: space-evenly;
       @include title-font-regular;
       font-size: 10px;
       color: #888;
